--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 spring.main.banner-mode=off
 server.port=8090
+
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.datasource.url=jdbc:mysql://localhost:3306/dbcrypt?serverTimezone=Europe/Kiev
+
+spring.datasource.url=jdbc:mysql://localhost:3306/DB_CRYPT?serverTimezone=Europe/Kiev
 spring.datasource.username=root
 spring.datasource.password=123
-#spring.datasource.schema=BAS3_FRONT
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # HikariCP settings
@@ -12,14 +13,5 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.connection-timeout=10000
 # max 5
 spring.datasource.hikari.maximum-pool-size=5
-
 spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=1800000
-
-#spring.h2.console.enabled=true
-
-
-#Turn Statistics on and log SQL stmts
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.generate_statistics=true
