--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.datasource.hikari.connection-timeout=10000
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=1800000
+
+#logging.pattern.file=%d{dd.MM.yyyy HH:mm:ss} - %msg%n
+#logging.pattern.console=%d{dd.MM.yyyy HH:mm:ss} - %msg%n
