--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.main.banner-mode=off
+#spring.main.banner-mode=off
 server.port=8090
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
@@ -15,6 +15,3 @@ spring.datasource.hikari.connection-timeout=10000
 spring.datasource.hikari.maximum-pool-size=5
 spring.datasource.hikari.idleTimeout=600000
 spring.datasource.hikari.maxLifetime=1800000
-
-#logging.pattern.file=%d{dd.MM.yyyy HH:mm:ss} - %msg%n
-#logging.pattern.console=%d{dd.MM.yyyy HH:mm:ss} - %msg%n
