--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 #spring.main.banner-mode=off
-server.port=8090
+#server.port=8090
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 spring.datasource.url=jdbc:mysql://localhost:3306/DB_CRYPT?serverTimezone=Europe/Kiev
-spring.datasource.username=root
-spring.datasource.password=123
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # HikariCP settings
